--- a/AspNetCoreIdentity.Web/AspNetCoreIdentity.Web.csproj
+++ b/AspNetCoreIdentity.Web/AspNetCoreIdentity.Web.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="wwwroot\UserPicture\" />
   </ItemGroup>
 
 </Project>
